tests/compile_fail/skipped_required.dd
from serdde.macros import Serde


@derive(Serde)
class SkippedRequired:
    @Serde(skip=True)
    value: i32
